--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded with ❤️ by Regomoditswe and is
+      This project was coded with by Regomoditswe and is
       <a href="https://github.com/CynthiaLebelela/world-clock" target="_blank">
         open sourced on GitHub</a
       >
