--- a/index.html
+++ b/index.html
@@ -8,12 +8,29 @@
     <title>World Clock</title>
   </head>
   <body>
+    <div class="container">
     <h1>World Clock</h1>
+    <select name="" id="">
+        <option value="">Select a city</option>
+        <option value="">Pretoria</option>
+        <option value="">Johannesburg</option>
+        <option value="">Cape Town</option>
+    </select>
+    <div class="city">
+        <h2>Pretoria </h2>
+        <div class="date">20 Sept 2024</div>
+        <div class="time">10:10 AM</div>
+    </div>
+    <div class="city"></div>
+        <h2>Pretoria </h2>
+        <div class="date">20 Sept 2024</div>
+        <div class="time">10:10 AM</div>
+    </div>
+    </div>
     <footer>
       This project was coded with by Regomoditswe and is
       <a href="https://github.com/CynthiaLebelela/world-clock" target="_blank">
-        open sourced on GitHub</a
-      >
+        open sourced on GitHub</a>
     </footer>
     <script src="script.js"></script>
   </body>
