--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
         <option value="">Cape Town</option>
     </select>
     <div class="city">
+        <div>
         <h2>Pretoria </h2>
         <div class="date">20 Sept 2024</div>
-        <div class="time">10:10 AM</div>
+        </div>
+        <div class="time">10:10:05 <small>AM</small></div>
     </div>
-    <div class="city"></div>
-        <h2>Pretoria </h2>
-        <div class="date">20 Sept 2024</div>
-        <div class="time">10:10 AM</div>
-    </div>
+        <div class="city">
+            <div>
+                <h2>Johannesburg </h2>
+                <div class="date">20 Sept 2024</div>
+            </div>
+            <div class="time">10:10:05 <small>AM</small></div>
+        </div>
     </div>
     <footer>
-      This project was coded with by Regomoditswe and is
+      This project was coded with by <strong>Regomoditswe</strong> and is
       <a href="https://github.com/CynthiaLebelela/world-clock" target="_blank">
         open sourced on GitHub</a>
     </footer>
