--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
     <title>World Clock</title>
   </head>
   <body>
@@ -12,23 +15,23 @@
     <h1>World Clock</h1>
     <select name="" id="">
         <option value="">Select a city</option>
-        <option value="">Pretoria</option>
+        <option value="">Paris</option>
         <option value="">Johannesburg</option>
         <option value="">Cape Town</option>
     </select>
-    <div class="city">
+    <div class="city" id="johannesburg">
         <div>
-        <h2>Pretoria </h2>
-        <div class="date">20 Sept 2024</div>
+        <h2> Johannesburg</h2>
+        <div class="date"></div>
         </div>
-        <div class="time">10:10:05 <small>AM</small></div>
+        <div class="time"></div>
     </div>
-        <div class="city">
+        <div class="city" id="paris">
             <div>
-                <h2>Johannesburg </h2>
-                <div class="date">20 Sept 2024</div>
+                <h2>Paris </h2>
+                <div class="date"></div>
             </div>
-            <div class="time">10:10:05 <small>AM</small></div>
+            <div class="time"></div>
         </div>
     </div>
     <footer>
