--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <body>
     <div class="container">
     <h1>World Clock</h1>
-    <select name="" id="">
+    <select id="city">
         <option value="">Select a city</option>
-        <option value="">Paris</option>
-        <option value="">Johannesburg</option>
-        <option value="">Cape Town</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="Africa/Johannesburg">Johannesburg</option>
+        <option value="Asia/Hong_Kong">Hong Kong</option>
     </select>
+    <div id="cities">
     <div class="city" id="johannesburg">
         <div>
         <h2> Johannesburg</h2>
@@ -32,6 +33,7 @@
                 <div class="date"></div>
             </div>
             <div class="time"></div>
+        </div>
         </div>
     </div>
     <footer>
