--- a/index.html
+++ b/index.html
@@ -14,33 +14,61 @@
     <div class="container">
     <h1>World Clock</h1>
     <select id="city">
-        <option value="">Select a city</option>
+        <option value="" >Select a city</option>
         <option value="Europe/Paris">Paris</option>
         <option value="Africa/Johannesburg">Johannesburg</option>
         <option value="Asia/Hong_Kong">Hong Kong</option>
     </select>
-    <div id="cities">
-    <div class="city" id="johannesburg">
-        <div>
-        <h2> Johannesburg</h2>
-        <div class="date"></div>
-        </div>
-        <div class="time"></div>
-    </div>
-        <div class="city" id="paris">
+    
+        <div id="cities">
+          <div class="city" id="johannesburg">
             <div>
-                <h2>Paris </h2>
-                <div class="date"></div>
+              <h2>Johannesburg</h2>
+              <div class="date"></div>
             </div>
             <div class="time"></div>
-        </div>
-        </div>
-    </div>
+           </div>
+                <div class="city" id="paris">
+                  <div>
+                    <h2>Paris</h2>
+                    <div class="date"></div>
+                    </div>
+                    <div class="time"></div>
+                  </div>
+                 </div>
+              </div>
+              
     <footer>
       This project was coded with by <strong>Regomoditswe</strong> and is
       <a href="https://github.com/CynthiaLebelela/world-clock" target="_blank">
         open sourced on GitHub</a>
     </footer>
     <script src="script.js"></script>
+    <script>function updateCity(event) {
+        let cityTimeZone = event.target.value;
+
+
+        if (!cityTimeZone) {
+          return;
+        }
+
+        let cityName = cityTimeZone.replace("_", " ").split("/")[1];
+        let cityTime = moment().tz(cityTimeZone);
+        let citiesElement = document.querySelector("#cities");
+        citiesElement.innerHTML = `
+        <div class="city">
+            <div>
+                <h2>${cityName}</h2>
+                <div class="date">${cityTime.format("MMMM Do YYYY")}</div>
+            </div>
+            <div class="time">${cityTime.format("h:mm:ss")} <small>${cityTime.format("A")}</small></div>
+        </div>
+    `;
+      }
+
+      let citiesSelectElement = document.querySelector("#city");
+      if (citiesSelectElement) {
+        citiesSelectElement.addEventListener("change", updateCity);
+      }</script>
   </body>
 </html>
