--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   </head>
   <body>
     <div class="container">
-    <h1>
-      <a href="/">World Clock</a>
-    </h1>
+    <h1>World Clock</h1>
     <select id="city">
         <option value="" >Select a city</option>
         <option value="current">My current location</option>
@@ -68,6 +66,7 @@
             </div>
             <div class="time">${cityTime.format("h:mm:ss")} <small>${cityTime.format("A")}</small></div>
         </div>
+        <a href="/">All cities</a>  
     `;
       }
 
